@@ -1,97 +1,115 @@
 package com.frauddetection.scoring.orchestration;
 
-import com.frauddetection.common.events.engine.FraudEngineStatus;
 import com.frauddetection.common.events.enums.RiskLevel;
 import org.junit.jupiter.api.Test;
 
-import java.lang.reflect.RecordComponent;
-import java.util.Arrays;
 import java.util.List;
 
 import static com.frauddetection.scoring.orchestration.FraudScoringOrchestratorTestSupport.availableResult;
 import static com.frauddetection.scoring.orchestration.FraudScoringOrchestratorTestSupport.context;
 import static com.frauddetection.scoring.orchestration.FraudScoringOrchestratorTestSupport.degradedResult;
-import static com.frauddetection.scoring.orchestration.FraudScoringOrchestratorTestSupport.engineIds;
-import static com.frauddetection.scoring.orchestration.FraudScoringOrchestratorTestSupport.flatten;
 import static com.frauddetection.scoring.orchestration.FraudScoringOrchestratorTestSupport.mlDescriptor;
 import static com.frauddetection.scoring.orchestration.FraudScoringOrchestratorTestSupport.mlEngine;
 import static com.frauddetection.scoring.orchestration.FraudScoringOrchestratorTestSupport.ruleDescriptor;
 import static com.frauddetection.scoring.orchestration.FraudScoringOrchestratorTestSupport.ruleEngine;
+import static com.frauddetection.scoring.orchestration.FraudScoringOrchestratorTestSupport.throwingRuleEngine;
 import static com.frauddetection.scoring.orchestration.FraudScoringOrchestratorTestSupport.timeoutResult;
 import static com.frauddetection.scoring.orchestration.FraudScoringOrchestratorTestSupport.unavailableResult;
 import static org.assertj.core.api.Assertions.assertThat;
 
-class FraudScoringOrchestratorRuleAndMlExecutionTest {
+class FraudScoringOrchestratorStatusTest {
 
     @Test
-    void orchestratorCollectsRuleAndMlResults() {
+    void allEnginesAvailableProducesComplete() {
         FraudScoringOrchestrationResult result = orchestrator(
                 ruleEngine(availableResult(ruleDescriptor(), 0.42d, RiskLevel.LOW)),
                 mlEngine(availableResult(mlDescriptor(), 0.72d, RiskLevel.MEDIUM))
         ).evaluate(context());
 
-        assertThat(result.engineResults()).hasSize(2);
-        assertThat(engineIds(result)).containsExactly("rules.primary", "ml.python.primary");
         assertThat(result.status()).isEqualTo(FraudScoringOrchestrationStatus.COMPLETE);
     }
 
     @Test
-    void mlUnavailableDoesNotEraseRuleResult() {
+    void optionalMlUnavailableProducesPartial() {
         FraudScoringOrchestrationResult result = orchestrator(
                 ruleEngine(availableResult(ruleDescriptor(), 0.42d, RiskLevel.LOW)),
                 mlEngine(unavailableResult(mlDescriptor()))
         ).evaluate(context());
 
-        assertThat(result.engineResults()).extracting(engineResult -> engineResult.status())
-                .containsExactly(FraudEngineStatus.AVAILABLE, FraudEngineStatus.UNAVAILABLE);
         assertThat(result.status()).isEqualTo(FraudScoringOrchestrationStatus.PARTIAL);
-        assertNoDecisionFields();
     }
 
     @Test
-    void mlTimeoutDoesNotBecomeLowRisk() {
+    void optionalMlTimeoutProducesPartial() {
         FraudScoringOrchestrationResult result = orchestrator(
                 ruleEngine(availableResult(ruleDescriptor(), 0.42d, RiskLevel.LOW)),
                 mlEngine(timeoutResult(mlDescriptor()))
         ).evaluate(context());
 
-        assertThat(result.engineResults().get(1).status()).isEqualTo(FraudEngineStatus.TIMEOUT);
-        assertThat(result.engineResults().get(1).riskLevel()).isNull();
-        assertThat(result.engineResults().get(1).toString()).doesNotContain("LOW");
         assertThat(result.status()).isEqualTo(FraudScoringOrchestrationStatus.PARTIAL);
     }
 
     @Test
-    void degradedEngineIsPreserved() {
+    void optionalMlDegradedProducesPartial() {
         FraudScoringOrchestrationResult result = orchestrator(
                 ruleEngine(availableResult(ruleDescriptor(), 0.42d, RiskLevel.LOW)),
                 mlEngine(degradedResult(mlDescriptor()))
         ).evaluate(context());
 
-        assertThat(result.engineResults().get(1).status()).isEqualTo(FraudEngineStatus.DEGRADED);
-        assertThat(flatten(result)).doesNotContain("raw", "diagnostic", "payload");
         assertThat(result.status()).isEqualTo(FraudScoringOrchestrationStatus.PARTIAL);
     }
 
     @Test
-    void ruleAndMlScoresAreNotAggregated() {
+    void requiredRulesUnavailableProducesRequiredEngineFailed() {
         FraudScoringOrchestrationResult result = orchestrator(
-                ruleEngine(availableResult(ruleDescriptor(), 0.20d, RiskLevel.LOW)),
-                mlEngine(availableResult(mlDescriptor(), 0.91d, RiskLevel.HIGH))
+                ruleEngine(unavailableResult(ruleDescriptor())),
+                mlEngine(availableResult(mlDescriptor(), 0.72d, RiskLevel.MEDIUM))
         ).evaluate(context());
 
-        assertThat(result.engineResults()).extracting(engineResult -> engineResult.score())
-                .containsExactly(0.20d, 0.91d);
-        assertNoDecisionFields();
+        assertThat(result.status()).isEqualTo(FraudScoringOrchestrationStatus.REQUIRED_ENGINE_FAILED);
+    }
+
+    @Test
+    void requiredRulesTimeoutProducesRequiredEngineFailed() {
+        FraudScoringOrchestrationResult result = orchestrator(
+                ruleEngine(timeoutResult(ruleDescriptor())),
+                mlEngine(availableResult(mlDescriptor(), 0.72d, RiskLevel.MEDIUM))
+        ).evaluate(context());
+
+        assertThat(result.status()).isEqualTo(FraudScoringOrchestrationStatus.REQUIRED_ENGINE_FAILED);
+    }
+
+    @Test
+    void requiredRulesDegradedProducesRequiredEngineFailed() {
+        FraudScoringOrchestrationResult result = orchestrator(
+                ruleEngine(degradedResult(ruleDescriptor())),
+                mlEngine(availableResult(mlDescriptor(), 0.72d, RiskLevel.MEDIUM))
+        ).evaluate(context());
+
+        assertThat(result.status()).isEqualTo(FraudScoringOrchestrationStatus.REQUIRED_ENGINE_FAILED);
+    }
+
+    @Test
+    void requiredRulesThrowsProducesRequiredEngineFailed() {
+        FraudScoringOrchestrationResult result = orchestrator(
+                throwingRuleEngine(new IllegalStateException("secret token endpoint stacktrace")),
+                mlEngine(availableResult(mlDescriptor(), 0.72d, RiskLevel.MEDIUM))
+        ).evaluate(context());
+
+        assertThat(result.status()).isEqualTo(FraudScoringOrchestrationStatus.REQUIRED_ENGINE_FAILED);
+    }
+
+    @Test
+    void requiredRulesNullResultProducesRequiredEngineFailed() {
+        FraudScoringOrchestrationResult result = orchestrator(
+                ruleEngine(null),
+                mlEngine(availableResult(mlDescriptor(), 0.72d, RiskLevel.MEDIUM))
+        ).evaluate(context());
+
+        assertThat(result.status()).isEqualTo(FraudScoringOrchestrationStatus.REQUIRED_ENGINE_FAILED);
     }
 
     private FraudScoringOrchestrator orchestrator(FraudScoringOrchestratorTestSupport.FakeFraudSignalEngine... engines) {
-        return new FraudScoringOrchestrator(new FraudSignalEngineRegistry(Arrays.asList(engines)));
-    }
-
-    private void assertNoDecisionFields() {
-        assertThat(Arrays.stream(FraudScoringOrchestrationResult.class.getRecordComponents())
-                .map(RecordComponent::getName))
-                .doesNotContain("overallRisk", "finalRisk", "platformRisk", "finalDecision");
+        return new FraudScoringOrchestrator(new FraudSignalEngineRegistry(List.of(engines)));
     }
 }
